# MyQScintilla

./: CMakeLists.txt
Python/config-tests/: cfgtest_Qsci.cpp
